Agregando funcionalidad de léxico al compilador

--- a/PresentacionCarSof/PresentacionCarSof.csproj
+++ b/PresentacionCarSof/PresentacionCarSof.csproj
@@ -79,5 +79,15 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Entidades\Entidades.csproj">
+      <Project>{e66925a1-dda6-4452-a22d-1f03081cdb1d}</Project>
+      <Name>Entidades</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Manejadores\Manejadores.csproj">
+      <Project>{eef1aa3f-552b-4ade-8c36-bda35f4f9e78}</Project>
+      <Name>Manejadores</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
