--- a/Entidades/Entidades.csproj
+++ b/Entidades/Entidades.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ErroresSintacticos.cs" />
     <Compile Include="Tokens.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
